fixed - dropdown clipping line-height

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -301,7 +301,8 @@ $form-label-font-size: rem-calc(14);
 $form-label-font-weight: $global-weight-normal;
 $form-label-line-height: 2.5;
 $select-background: $white;
-$select-triangle-color: $dark-gray;
+$select-triangle-color: $palette-color-median;
+// $select-triangle-color: $dark-gray;
 $select-radius: $global-radius;
 $input-color: $palette-color-darken;
 // $input-color: $black;
