--- a/app/styles/modules/_workspace.scss
+++ b/app/styles/modules/_workspace.scss
@@ -30,7 +30,7 @@
     }
 
     &-controls {
-        padding: 1em .5em .57 1em;
+        padding: 1em .5em .57em 1em;
         border-top: 1px solid $palette-color-lightens;
         text-align: right; // background-color: $palette-color-lightens;
 
